# tauri-2025

./: .gitignore  README.md  SIMULATION_STREAMING_README.md  buf.gen.yaml  mock-sensor.js  next.config.ts  package.json  pnpm-lock.yaml  protoc-generate.sh
proto/: packet.proto  simulation.proto
sidecar-app/: convert.js  index.js  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  commands_async.rs  general.rs  logger.rs  main.rs  packet.rs  serial.rs  simulation.rs  storage.rs  transport.rs  zmq.rs  zmq_server.rs  zmq_server_tokio.rs
src-tauri/src/general/: commands.rs  sensor_udp_server.rs  serial.rs  simulation.rs  simulation_commands.rs  simulation_streaming.rs  timer_res.rs
src-tauri/src/simulation_state/: command.rs
src-tauri/src/storage/: commands.rs  file_logger.rs  store.rs
src-tauri/src/transport/: commands.rs  connection_manager.rs  convert.rs  serial.rs  streamer.rs  udp.rs
src/app/: CommunicationMonitor.tsx  SerialTab.tsx  SerialTabGeneral.tsx  SimulationConfigPage.tsx  SimulationRunner.tsx  SimulationStreamingDemo.tsx  UDPTapGeneral.tsx  ZmqTab.tsx  connections.tsx  layout.tsx  page.tsx  serial-tab-general.tsx  simulation-map.tsx
src/app/actions/: connection-actions.ts  packet-actions.ts  packet-statistics-actions.ts  share-actions.ts
src/app/connections/: page.tsx
src/app/setup/: page.tsx
src/app/simulation-config/: page.tsx
src/components/: ControlledMarker.tsx  MapPage.tsx  SensorStreamingControl.tsx  SimulationInitForm.tsx  SimulationMarkers.tsx  SimulationStreamingControl.tsx  active-shares-table.tsx  connection-form.tsx  connection-list-view.tsx  connection-list.tsx  debug-info.tsx  log-files-section.tsx  packet-counters.tsx  packet-display.tsx  serial-monitor.tsx  serial-terminal.tsx  simulation-config-dialog.tsx  simulation-section.tsx  udp-config.tsx  udp-form.tsx  udp-server-init.tsx  udp-target-sharing.tsx
src/hooks/: use-log-files.ts  use-packet-data.ts  use-serial-connections.ts  use-shares.ts  use-simulation.ts  use-udp-connections.ts  use-udp-targets.ts  useSimulationTargets.ts
src/lib/: communication-actions.ts  log-actions.ts  serial.ts  simulation-streaming.ts  utils.ts
src/types/: index.ts
src/utils/: connection-utils.ts  packet-utils.ts  text-utils.ts  validation-utils.ts
