[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.0", features = ["config-toml", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-websocket = "2"
tauri-plugin-upload = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["mysql", "postgres", "sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-localhost = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-serialplugin = "2.11.0"
zmq = { version = "0.10.0"}
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.5"
crossbeam-channel = "0.5.14"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serialport="4.7.2"
prost = "0.13"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
