[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.3.0", features = [] }
prost-build = "0.13.5"

[dependencies]
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.6.0", features = ["config-toml", "devtools"] }
zmq = { version = "0.10.0"}
tokio = { version = "1.45.0", features = ["full"] }
rand = "0.8.5"
crossbeam-channel = "0.5.14"
serialport5 = "5.0.2"
serialport="4.7.2"
prost = "0.13"
prost-types = "0.13"
tokio-serial = "5"
futures = "0.3.31"
console-subscriber = "0.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
base64 = "0.21.7"
tracing-appender = "0.2.3"
derivative = "2"
anyhow = "1"
jord = "0.15.0"
tauri-plugin-log = "=2.3.0"
tauri-plugin-websocket = "=2.3.0"
tauri-plugin-upload = "=2.3.0"
tauri-plugin-stronghold = "=2.3.0"
tauri-plugin-store = "=2.3.0"
tauri-plugin-sql = { version = "=2.3.0", features = ["mysql", "postgres", "sqlite"] }
tauri-plugin-shell = "=2.3.0"
tauri-plugin-persisted-scope = "=2.3.0"
tauri-plugin-os = "=2.3.0"
tauri-plugin-opener = "=2.3.0"
tauri-plugin-notification = "=2.3.0"
tauri-plugin-localhost = "=2.3.0"
tauri-plugin-http = "=2.3.0"
tauri-plugin-fs = "=2.4.0"
tauri-plugin-dialog = "=2.3.0"
tauri-plugin-deep-link = "=2.3.0"
tauri-plugin-clipboard-manager = "=2.3.0"
tauri-plugin-serialplugin = "=2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "=2.3.0"
tauri-plugin-cli = "=2.3.0"
tauri-plugin-global-shortcut = "=2.3.0"
tauri-plugin-positioner = "=2.3.0"
tauri-plugin-single-instance = "=2.3.0"
tauri-plugin-updater = "=2.3.0"
tauri-plugin-window-state = "=2.3.0"
once_cell = "1"
winapi = { version = "0.3", features = ["timeapi"] }
uuid = { version = "1", features = ["v4"] }
